--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,15 +9,32 @@ services:
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: raily
-  # frontend:
-  #   build:
-  #     context: .
-  #     dockerfile: ./Dockerfile.front
-  #   ports:
-  #     - 3000:3000
-  # backend:
-  #   build:
-  #     context: .
-  #     dockerfile: ./Dockerfile.back
-  #   ports:
-  #     - 4000:4000
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    networks:
+      - nw
+  backend:
+    depends_on:
+      postgres:
+        condition: service_healthy
+    build:
+      context: .
+      dockerfile: ./Dockerfile.back
+    ports:
+      - 4000:4000
+    networks:
+      - nw
+  frontend:
+    depends_on:
+      - backend
+    build:
+      context: .
+      dockerfile: ./Dockerfile.front
+    ports:
+      - 3000:3000
+networks:
+  nw:
+    name: nw
