--- a/Dockerfile.back
+++ b/Dockerfile.back
@@ -1,3 +1,10 @@
 FROM ubuntu:latest
 
 COPY ./backend ./backend
+
+RUN cd backend && \
+    apt-get update -y && \
+    apt-get install -y --no-install-recommends nodejs npm && \
+    npm install
+
+ENTRYPOINT cd backend && node backend.js
