--- a/Dockerfile.front
+++ b/Dockerfile.front
@@ -1,3 +1,11 @@
 FROM ubuntu:latest
 
 COPY ./raily ./raily
+
+RUN cd raily && \
+    apt-get update -y && \
+    apt-get install -y --no-install-recommends nodejs npm && \
+    npm install --global yarn && \
+    yarn install --ignore-engines
+
+ENTRYPOINT cd raily && npm start
