--- a/Dockerfile.pg
+++ b/Dockerfile.pg
@@ -4,3 +4,5 @@ ARG PG_DEV_VERSION=14
 
 COPY ./data/*.csv ./
 COPY db.sql /docker-entrypoint-initdb.d/
+RUN chown -R postgres:postgres /docker-entrypoint-initdb.d/
+RUN chown -R postgres:postgres *.csv
